--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,6 @@
 layout: default
 ---
 <article class="post">
-
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
@@ -10,5 +9,8 @@ layout: default
   <div class="post-content">
     {{ content }}
   </div>
-
 </article>
+
+<script type="text/javascript"
+    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
