--- a/css/main.scss
+++ b/css/main.scss
@@ -51,3 +51,19 @@ $on-laptop:        800px;
         "layout",
         "syntax-highlighting"
 ;
+
+table{
+    border-collapse: collapse;
+    border-spacing: 0;
+    border:2px solid #000000;
+}
+
+th{
+    border:1px solid #000000;
+    padding: 14px;
+}
+
+td{
+    border:1px solid #000000;
+    padding: 14px;
+}
