--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     </div>
 
     {% include footer.html %}
-
+    {% if page.mermaid %}<script src="/js/mermaid.js"></script>{% endif %}
   </body>
 
 </html>
