trying to get mermaid to work with different js source files. this wont display on my machine yet

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,9 @@
     </div>
 
     {% include footer.html %}
-    {% if page.mermaid %}<script src="/js/mermaid.js"></script>{% endif %}
+
+    {% if page.mermaid %}<script src="/js/mermaid.full.js"></script>{% endif %}
+
   </body>
 
 </html>
