continuing post and added asciinema to playback terminal output... so cool!

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,4 +16,6 @@
 {% include analytics.html %}
 {% endif %}
 
+  <link rel="stylesheet" type="text/css" href="{{ "/css/asciinema-player.css" | prepend: site.baseurl }}" />
+
 </head>
