--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,8 @@
 
     {% if page.mermaid %}<script src="/js/mermaid.full.js"></script>{% endif %}
 
+  <script src="/js/asciinema-player.js"></script>
+
   </body>
 
 </html>
