--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,4 +18,16 @@
 
   <link rel="stylesheet" type="text/css" href="{{ "/css/asciinema-player.css" | prepend: site.baseurl }}" />
 
+  <!--facebook button code-->
+  <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.8";
+  fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));</script>
+
 </head>
+
+
