--- a/_includes/share-page.html
+++ b/_includes/share-page.html
@@ -1,6 +1,9 @@
-<div class="share-page">
-  <a href="https://twitter.com/share" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-  <br/>
+<div class="share-page" align="center" style="width:150px; margin:auto">
+    <br/>
+    
+    <div class="twitter-share-button" data-layout="button" data-mobile-iframe="true"><a href="https://twitter.com/share" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script></div>
+    
   <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse">Share</a></div>
+  
 </div>
 
